--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  min-height: 4rem;
-  max-height: 5rem;
+  margin: 0px;
   background-color: rgb(35, 38, 53); 
 }
